--- a/apps/dashboard/apps/dashboard/src/index.css
+++ b/apps/dashboard/apps/dashboard/src/index.css
@@ -4,6 +4,13 @@
 
 body {
   font-family: "Inter Variable", sans-serif;
+  height: 100dvh;
+}
+
+#root {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 @layer base {
