--- a/apps/dashboard/apps/dashboard/src/index.css
+++ b/apps/dashboard/apps/dashboard/src/index.css
@@ -9,6 +9,7 @@ body {
 
 #root {
   height: 100%;
+  padding-top: 4rem;
   display: flex;
   flex-direction: column;
 }
@@ -76,4 +77,21 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(163 163 163 / var(--tw-bg-opacity, 1));
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(212 212 212 / var(--tw-bg-opacity, 1));
 }
