--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -1,60 +1,111 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 0 0% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 0 0% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 0 0% 96.1%;
-    --secondary-foreground: 0 0% 9%;
-    --muted: 0 0% 96.1%;
-    --muted-foreground: 0 0% 45.1%;
-    --accent: 0 0% 96.1%;
-    --accent-foreground: 0 0% 9%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 89.8%;
-    --input: 0 0% 89.8%;
-    --ring: 0 0% 3.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --background: 223.8136 0.0002% 96.0587%;
+    --foreground: 0 0% 0%;
+    --card: 223.8136 0.0002% 96.0587%;
+    --card-foreground: 240.1022 11.2443% 3.9839%;
+    --popover: 223.8136 0.0002% 96.0587%;
+    --popover-foreground: 214.9924 30.9869% 16.9495%;
+    --primary: 47.2993 165.4722% 35.458%;
+    --primary-foreground: 223.8136 0% 3.9388%;
+    --secondary: 46.1842 100% 70.1961%;
+    --secondary-foreground: 240.1341 6.0037% 34.1599%;
+    --muted: 217.9005 11.9219% 64.2616%;
+    --muted-foreground: 223.8136 0% 3.9388%;
+    --accent: 47.2993 165.4722% 35.458%;
+    --accent-foreground: 223.8136 0% 9.0527%;
+    --destructive: 351.7303 123.6748% 40.5257%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 223.8136 0% 32.1993%;
+    --input: 240.0761 5.7134% 64.2961%;
+    --ring: 47.2993 165.4722% 35.458%;
+    --chart-1: 139.6552 52.7273% 43.1373%;
+    --chart-2: 218.5401 79.1908% 66.0784%;
+    --chart-3: 189.635 81.0651% 66.8627%;
+    --chart-4: 207.2727 44% 49.0196%;
+    --chart-5: 138.871 70.4545% 34.5098%;
+    --sidebar: 223.8136 0.0001% 89.8161%;
+    --sidebar-foreground: 240.0469 4.043% 15.9329%;
+    --sidebar-primary: 47.2993 165.4722% 35.458%;
+    --sidebar-primary-foreground: 240.0173 6.0307% 9.9812%;
+    --sidebar-accent: 46.1842 100% 70.1961%;
+    --sidebar-accent-foreground: 220.9996 41.6876% 11.0655%;
+    --sidebar-border: 223.8136 0% 14.9382%;
+    --sidebar-ring: 356.946 95.8988% 57.7229%;
+    --font-sans: Inter, sans-serif;
+    --font-serif: Inter, sans-serif;
+    --font-mono: Inter, sans-serif;
     --radius: 0.5rem;
+    --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-sm:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+    --shadow:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+    --shadow-md:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
+    --shadow-lg:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
+    --shadow-xl:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
+    --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
+    --tracking-normal: 0em;
+    --spacing: 0.25rem;
   }
+
   .dark {
-    --background: 0 0% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 0 0% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 0 0% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 0 0% 9%;
-    --secondary: 0 0% 14.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 0 0% 14.9%;
-    --muted-foreground: 0 0% 63.9%;
-    --accent: 0 0% 14.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 0 0% 14.9%;
-    --input: 0 0% 14.9%;
-    --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --background: 240.0173 6.0307% 9.9812%;
+    --foreground: 0 0% 100%;
+    --card: 240.0469 4.043% 15.9329%;
+    --card-foreground: 0 0% 89.8039%;
+    --popover: 223.8136 0% 14.9382%;
+    --popover-foreground: 209.9983 24.1882% 98.0992%;
+    --primary: 46.1842 100% 70.1961%;
+    --primary-foreground: 222.3362 49.39% 11.299%;
+    --secondary: 240.0756 5.7405% 26.1456%;
+    --secondary-foreground: 46.8179 100.739% 59.5298%;
+    --muted: 223.8136 0% 25.0471%;
+    --muted-foreground: 223.8136 0.0004% 98.0256%;
+    --accent: 223.8136 0% 25.0471%;
+    --accent-foreground: 46.6817 159.6637% 38.5235%;
+    --destructive: 353.3247 117.9685% 34.7245%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 223.8136 0% 32.1993%;
+    --input: 223.8136 0% 63.0163%;
+    --ring: 46.1842 100% 70.1961%;
+    --chart-1: 139.6552 52.7273% 43.1373%;
+    --chart-2: 207.2727 44% 49.0196%;
+    --chart-3: 218.5401 79.1908% 66.0784%;
+    --chart-4: 189.635 81.0651% 66.8627%;
+    --chart-5: 138.871 70.4545% 34.5098%;
+    --sidebar: 220 14.7541% 11.9608%;
+    --sidebar-foreground: 0 0% 89.8039%;
+    --sidebar-primary: 42.7084 157.0678% 31.8031%;
+    --sidebar-primary-foreground: 12.8833 84.8059% 14.417%;
+    --sidebar-accent: 240.1341 6.0037% 34.1599%;
+    --sidebar-accent-foreground: 359.9996 88.2079% 97.3213%;
+    --sidebar-border: 223.8136 0% 14.9382%;
+    --sidebar-ring: 139.6552 52.7273% 43.1373%;
+    --font-sans: Inter, sans-serif;
+    --font-serif: Inter, sans-serif;
+    --font-mono: Inter, sans-serif;
+    --radius: 0.5rem;
+    --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-sm:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+    --shadow:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 1px 2px -1px hsl(0 0% 0% / 0.1);
+    --shadow-md:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 2px 4px -1px hsl(0 0% 0% / 0.1);
+    --shadow-lg:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 4px 6px -1px hsl(0 0% 0% / 0.1);
+    --shadow-xl:
+      0 1px 3px 0px hsl(0 0% 0% / 0.1), 0 8px 10px -1px hsl(0 0% 0% / 0.1);
+    --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   }
 }
 
