refactor: colors - replaced all occurrences of `*-moon` tailwind classes by `*-primary`

--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -109,6 +109,11 @@
   }
 }
 
+body {
+  font-family: "Inter Variable", sans-serif;
+  height: 100dvh;
+}
+
 ::-webkit-scrollbar {
   width: 0.5rem;
 }
