--- a/packages/ui/src/globals.css
+++ b/packages/ui/src/globals.css
@@ -123,7 +123,7 @@ body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: rgb(163 163 163 / var(--tw-bg-opacity, 1));
+  background: hsl(var(--border));
   border-radius: 0.25rem;
 }
 
